# Code

./: .gitignore  README.md
ArmInstructionParser/: ARM Instruction Parser.sln
EpamCourseTasks/onion_store/: README.md
StrokesCounter/: Program.cs
arm-instruction-parser/: ARM Instruction Parser.csproj  Program.cs
automation-scripts/: cloud-sync.fish
uni/ASD_Lab4/: testBinarySearchTree.cpp
uni/CG_Lab3/: GameViewController.swift  README.md
uni/IDA_Lab3/: lab3iad.sln
uni/JavaLab2/: .project
uni/OM_Lab1/: lab1om.sln
uni/OM_Lab2/: лаб_2_da_01_дячина.sln
uni/OM_Lab3/: лаб_3_da-01_дячина.sln
uni/OOP_CW/: README.md
uni/PACA_Lab1/: paca_lab1.sln
uni/PC_Lab1/: Program.cs
uni/PC_Lab2/: Program.cs  TaskQueue.cs  ThreadPool.cs
uni/Prog_CW/: README.md  huffman_coding.cpp  insert.drawio  priority_queue.cpp  search.cpp  ДА-01 Дячина Микита Курсова робота.odt
uni/SA_Lab2/: main.py
uni/SDB_Lab4/: main.py
uni/TIC_CW/: output_file
uni/TIC_Lab1/: Program.cs
uni/TIC_Lab2/: Coding.cs  Prompt.cs  ShannonCoding.sln  Поетика (Арістотель) (z-lib.org).fb2
uni/TIC_Lab4/: ДА01_Дячина_Lab3.pages
uni/cg-lab3/: AppDelegate.swift  Renderer.swift  ShaderTypes.h  Shaders.metal
uni/ida-lab2/: README.md
uni/ida-lab3/: Program.cs
uni/ml-lab2/: main.ipynb
uni/om-lab1/: Program.cs
uni/om-lab2/: Program.cs
uni/om-lab3/: Program.cs  лаб_3_da-01_дячина.csproj
uni/paca-lab1/: Program.cs
uni/paca-lab4/: PacaLab4.sln
uni/pc-lab1/: Program.cs
uni/prog-cw/: CMakeLists.txt  heapsort.cpp  inorder-tree-walk.drawio  main.cpp  menu.drawio  treesort.cpp
(+85 files in other folders)
